/* Changes-1.06.txt */

--- Updates ---

CCore/inc/AnyPtr.h 

  AnyPtr_const::operator +   is fixed

CCore/inc/Exception.h

  ~PrintException() noexcept(false) is added

--- New features -----

CCore/inc/AnyPtr.h 

  hasType(), castPtr() and applyFor() methods are added
  print() is added

CCore/inc/ElementPool.h

  cat() and shrink_extra() are added to the ElementPool

  shrink_extra() is added() to the MemPool

----------------------