@@ -141,8 +141,8 @@ enum ErrorCodes
   ErrorNotEnoughMemory  =   8,
   ErrorOutOfMemory      =  14,
   ErrorInvalidDrive     =  15,
-  ErrorWriteProtect     =  16,
   ErrorNoMoreFiles      =  18,
+  ErrorWriteProtect     =  19,
   ErrorSeek             =  25,
   ErrorWriteFault       =  29,
   ErrorReadFault        =  30,
